Made classes private to the package if they need to be. Some more cleaning.